--- a/assets/frontend/css/style.css
+++ b/assets/frontend/css/style.css
@@ -5488,7 +5488,7 @@ a:focus {
 	opacity: 0.4;
 	background-repeat: no-repeat;
 	background-position: center center;
-	background-image: url(../images/shapes/pricing-icon-shape-1-1.png);
+	/* background-image: url(../images/shapes/pricing-icon-shape-1-1.png); */
 	transition: all 500ms ease;
 }
 
