--- a/assets/frontend/css/main.css
+++ b/assets/frontend/css/main.css
@@ -2847,8 +2847,17 @@ input.main-search-input:-ms-input-placeholder {
   padding: 10px 15px 10px 15px;
   line-height: 1.5;
   font-weight: 600;
-  display: inline-block;
-  text-align: center;}
+  display: inline-block;}
+
+  @media only screen and (min-width: 992px) and (max-width: 1200px) {
+    .semi-title {
+      text-align: center !important;} }
+  @media only screen and (min-width: 768px) and (max-width: 991px) {
+    .semi-title {
+      text-align: center !important;} }
+  @media (max-width: 767px) {
+    .semi-title {
+      text-align: center !important;} }
 
 .sect-title {
   font-size: 40px;
@@ -2860,12 +2869,10 @@ input.main-search-input:-ms-input-placeholder {
       font-size: 35px; } }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .sect-title {
-      font-size: 35px; 
-      text-align: center;} }
+      font-size: 35px; } }
   @media (max-width: 767px) {
     .sect-title {
-      font-size: 30px;
-      text-align: center;} }
+      font-size: 30px;} }
 
   .sect-title .bottom-shape::before {
     left: 0;
@@ -2878,6 +2885,12 @@ input.main-search-input:-ms-input-placeholder {
   .paragraph-title strong {
     color: #083d59;
     font-weight: 700; }
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+      .paragraph-title {
+        text-align: justify; } }
+    @media (max-width: 767px) {
+      .paragraph-title {
+        text-align: justify; } }
 
 .semi-grey {
   color: #92aab6; }
@@ -10916,6 +10929,14 @@ input.main-search-input:-ms-input-placeholder {
 .visimisi p {
   color: #083d59;
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .visimisi {
+    text-align: center;
+  padding: 0 10px 0 10px ; } }
+@media (max-width: 767px) {
+  .visimisi {
+    text-align: center;
+  padding: 0 10px 0 10px ; } }
 
 .deskripsi-karir{
   color: #000;
