fix: css img kategori

--- a/assets/frontend/css/main.css
+++ b/assets/frontend/css/main.css
@@ -4331,12 +4331,12 @@ input.main-search-input:-ms-input-placeholder {
   .feature-area.features-bg.home-6 .container .feature-img-wrapper .img-fluid.one {
     max-width: 100%;
     height: auto; }
-    .img-fluid {
+    .img-kategori {
       width: 894px; 
       height: 382px;
       object-fit: cover;}
       @media (max-width: 768px) {
-        .img-fluid {
+        .img-kategori {
           max-width: 100%;
           height: auto; }}
 
