--- a/assets/frontend/css/main.css
+++ b/assets/frontend/css/main.css
@@ -164,27 +164,6 @@ p {
   color: #222;
   margin: 0; }
 
-.artikel-isi p {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  font-family: "GT Walsheim Pro";
-  color: #222;
-  margin-bottom: 22px; }
-  .artikel-isi li{
-  font-size: 18px;
-  list-style-type: square;
-  }
-  .artikel-title{
-    font-size: 33px;
-    margin-bottom: 20px;
-  }
-  @media (max-width: 768px) {
-    .artikel-title {
-      font-size: 22px;
-      margin-bottom: 20px; }
-  }
-
 hr {
   border-bottom: 1px solid rgba(27, 33, 47, 0.1);
   border-top: 0 none;
@@ -4332,13 +4311,21 @@ input.main-search-input:-ms-input-placeholder {
     max-width: 100%;
     height: auto; }
     .img-kategori {
-      width: 894px; 
-      height: 382px;
+      width: 100%; 
+      height: 30%;
       object-fit: cover;}
-      @media (max-width: 768px) {
+      @media only screen and (min-width: 992px) and (max-width: 1200px) {
         .img-kategori {
           max-width: 100%;
-          height: auto; }}
+          height: auto; } }
+      @media only screen and (min-width: 768px) and (max-width: 991px) {
+        .img-kategori {
+          max-width: 100%;
+          height: auto;; } }
+      @media (max-width: 767px) {
+        .img-kategori {
+          max-width: 100%;
+          height: auto; } }
 
     @media (max-width: 768px) {
       .feature-area.features-bg.home-6 .container .feature-img-wrapper .img-fluid.one {
@@ -11054,3 +11041,32 @@ input.main-search-input:-ms-input-placeholder {
   margin: 0;
   margin-top: 20px;
   margin-bottom: 35px; }
+
+  .artikel-isi
+  {
+    margin-bottom: 55px;
+  }
+  .artikel-isi img{
+    width: 100%;
+    object-fit: cover;
+  }
+  .artikel-isi p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    font-family: "GT Walsheim Pro";
+    color: #222;
+    margin-bottom: 22px; }
+    .artikel-isi li{
+    font-size: 18px;
+    list-style-type: square;
+    }
+    .artikel-title{
+      font-size: 33px;
+      margin-bottom: 20px;
+    }
+    @media (max-width: 768px) {
+      .artikel-title {
+        font-size: 22px;
+        margin-bottom: 20px; }
+    }
