--- a/assets/frontend/scss/main.css
+++ b/assets/frontend/scss/main.css
@@ -4439,9 +4439,8 @@ input.main-search-input:-ms-input-placeholder {
   .portfolio-wrapper2 .single-portfolio {
     padding: 0;
     position: absolute;
-    left: 50px;
-    top: auto;
-    bottom: 47px;
+    left: 19px;
+    top: 187px;
     z-index: 3;
     -webkit-transition: all 0.3s ease 0s;
     -moz-transition: all 0.3s ease 0s;
@@ -4453,8 +4452,8 @@ input.main-search-input:-ms-input-placeholder {
         left: 30px; } }
     @media (max-width: 767px) {
       .portfolio-wrapper2 .single-portfolio {
-        left: 15px;
-        bottom: 25px; } }
+        left: 14px;
+        bottom: 5px; } }
     .portfolio-wrapper2 .single-portfolio p {
       color: rgba(255, 255, 255, 0.5);
       padding-left: 0;
