--- a/assets/frontend/scss/main.css
+++ b/assets/frontend/scss/main.css
@@ -4440,7 +4440,8 @@ input.main-search-input:-ms-input-placeholder {
     padding: 0;
     position: absolute;
     left: 19px;
-    top: 187px;
+    top: auto;
+    bottom: 10px;
     z-index: 3;
     -webkit-transition: all 0.3s ease 0s;
     -moz-transition: all 0.3s ease 0s;
@@ -4453,7 +4454,8 @@ input.main-search-input:-ms-input-placeholder {
     @media (max-width: 767px) {
       .portfolio-wrapper2 .single-portfolio {
         left: 14px;
-        bottom: 5px; } }
+        top: auto;
+        bottom: 10px; } }
     .portfolio-wrapper2 .single-portfolio p {
       color: rgba(255, 255, 255, 0.5);
       padding-left: 0;
